--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.9.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-loading-overlay": "^3.3.2",
     "vue-router": "^3.1.5",
     "vuelidate": "^0.7.5",
     "vuex": "^3.1.2"
