--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,19 +13,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+    
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+    - name: Checkout 🛎️
+      uses: actions/checkout@v2.3.1
+      
     - name: Install and Build 🔧
       run: |
         npm install
@@ -36,8 +28,6 @@ jobs:
       with:
         branch: gh-pages
         folder: build
-        single-commit: true
-        clean: true
 
     
     
