--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jebasuthan/vue_crud_bootstrap.git"
+  },
+  "homepage": "https://github.com/Jebasuthan/vue_crud_bootstrap",
   "dependencies": {
     "axios": ">=0.21.1",
     "bootstrap": "^4.4.1",
