--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Deploy to gh-pages
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
+        token: ${{ secrets.ACCESS_TOKEN }}
         branch: gh-pages
         folder: dist
         single-commit: true
