--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,13 @@ jobs:
     steps:
     - name: Checkout 🛎️
       uses: actions/checkout@v2.3.1
+      with:
+          persist-credentials: false
+
+    - name: Using Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
       
     - name: Install and Build 🔧
       run: |
